# agnostic-file-store

./: .gitignore  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.md  notes.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
afs/: __init__.py  afs-sample.ini  afs_local.py  afs_memory.py  afs_smb.py  core.py  log.py
src/: __init__.py  afs.py  afs_smb.py  exceptions.py
src/afs/: __init__.py  afs_local.py  afs_memory.py  afs_sftp.py  afs_smb.py  core.py  errors.py  exceptions.py
src/tests/: test_config.py  test_memory.py  test_sftp.py
tests/: env.py  test_all.sh  test_config.py  test_core.py  test_local.py  test_memory.py  test_sftp.py
