[tool.poetry]
name = "agnostic-file-store"
version = "0.1.1"
description = "Storage files in in diferent storage systems [Local/Samba]"
authors = ["Juan Ignacio Rodriguez de Leon <euribates@gmail.com>"]
license = "GNU v.3"

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.15.0"
Pillow = "^8.1.2"
pysmb = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
