[metadata]
version = attr:afs.__version__
install_requires = six pysmb boto3
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GPLv3 

project_urls =
    source = https://github.com/euribates/agnostic-file-store/
    download = https://github.com/euribates/agnostic-file-store/archive/master.zip
